// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addon Actions Action and method 1`] = `
<app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <button-component
    _nghost-c4=""
  >
    
        
    <button
      _ngcontent-c4=""
    >
      Action and Method
    </button>
    
    
  </button-component>
</app-root>
`;

exports[`Storyshots Addon Actions Action only 1`] = `
<app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <button-component
    _nghost-c3=""
  >
    
        
    <button
      _ngcontent-c3=""
    >
      Action only
    </button>
    
    
  </button-component>
</app-root>
`;
